Fix upload form spacing, change navbar upload link

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -24,6 +24,12 @@
   margin: 11px 17px 0px 12px;
 }
 
+.navbar-upload-link {
+  color: $grey;
+  font-size: 16px;
+  margin: 11px 6px 0px 12px;
+}
+
 .navbar-profile-pic {
   height: 30px;
   width: 30px;
