--- a/app/assets/stylesheets/upload_form.scss
+++ b/app/assets/stylesheets/upload_form.scss
@@ -1,6 +1,6 @@
 .upload-form-container {
   align-self: center;
-  margin-top: 170px;
+  margin-top: 50px;
   width: 33%;
 }
 
